# PaintLab

./: .gitignore  README.md
PaintProject/: CMakeLists.txt  Drawer.cpp  Drawer.h  ICreator.h  Paint.cpp  Paint.h  PaintProject.pro  ellipse.cpp  ellipse.h  factory.cpp  factory.h  figuretype.cpp  figuretype.h  ifigure.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  makefigure.cpp  makefigure.h  makefigure.ui  paintscene.cpp  paintscene.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h
PaintProject/Figures/: Dot.cpp  Dot.h  Drawable.h  Ellipse.cpp  Ellipse.h  Figure.h  Line.cpp  Line.h  Point.cpp  Point.h  RadialBrush.cpp  RadialBrush.h  Rectangle.cpp  Rectangle.h
PaintProject/creators/: LineCreator.h  ellipsecreator.h  polygoncreator.h  rectanglecreator.h
TrapezoidPlugin/: TrapezoidPlugin.pro  TrapezoidPlugin_global.h  trapezoid.cpp  trapezoid.h  trapezoidplugin.cpp  trapezoidplugin.h
